[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Screens/GameOver4.png" type="Texture" id=2]
[ext_resource path="res://Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/GUI/Buttons/Restart/Button_90.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Buttons/Restart/Button_92.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/Buttons/Restart/Button_91.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/Buttons/Restart/Button_93.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Buttons/Home/Button_18.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Buttons/Home/Button_20.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Buttons/Home/Button_19.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Buttons/Home/Button_21.png" type="Texture" id=11]
[ext_resource path="res://Scripts/FadeIn/FadeIn.gd" type="Script" id=12]
[ext_resource path="res://Music/Dance of the Litlle Swans.ogg" type="AudioStream" id=13]
[ext_resource path="res://Music/Button_Select3.wav" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "FadeIn"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="GameOver" type="Node2D"]

script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 378.0
margin_bottom = 449.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Rect" ]

[node name="Score" type="Label" parent="NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 219.0
margin_top = 168.0
margin_right = 329.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "6549"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="HighScore" type="Label" parent="NinePatchRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_top = 243.0
margin_right = 331.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 309.0
margin_right = 309.0
margin_bottom = 392.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Restart" type="TextureButton" parent="NinePatchRect/HBoxContainer" index="0"]

self_modulate = Color( 0.957184, 0.958034, 0.960938, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 95.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
expand = true
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="Home" type="TextureButton" parent="NinePatchRect/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 201.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="FadeIn" type="ColorRect" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1139.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeIn = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="GameOverMusic" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 13 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ButtonSelect" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 14 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="NinePatchRect/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="NinePatchRect/HBoxContainer/Home" to="." method="_on_Home_pressed"]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]

[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]


